// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyboard renders correctly 1`] = `
<div
  class="za-keyboard"
>
  <div
    class="za-keyboard__keys"
  >
    <div
      class="za-keyboard__item"
    >
      1
    </div>
    <div
      class="za-keyboard__item"
    >
      2
    </div>
    <div
      class="za-keyboard__item"
    >
      3
    </div>
    <div
      class="za-keyboard__item"
    >
      4
    </div>
    <div
      class="za-keyboard__item"
    >
      5
    </div>
    <div
      class="za-keyboard__item"
    >
      6
    </div>
    <div
      class="za-keyboard__item"
    >
      7
    </div>
    <div
      class="za-keyboard__item"
    >
      8
    </div>
    <div
      class="za-keyboard__item"
    >
      9
    </div>
    <div
      class="za-keyboard__item za-keyboard__item--disabled"
    />
    <div
      class="za-keyboard__item"
    >
      0
    </div>
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--keyboard za-icon--default za-icon--lg"
        theme="default"
        type="keyboard"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#keyboard"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    class="za-keyboard__handle"
  >
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--deletekey za-icon--default za-icon--lg"
        theme="default"
        type="deletekey"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#deletekey"
          />
        </svg>
      </i>
    </div>
    <div
      class="za-keyboard__item za-keyboard__item--ok"
    >
      确定
    </div>
  </div>
</div>
`;

exports[`Keyboard type is idcard 1`] = `
<div
  class="za-keyboard"
>
  <div
    class="za-keyboard__keys"
  >
    <div
      class="za-keyboard__item"
    >
      1
    </div>
    <div
      class="za-keyboard__item"
    >
      2
    </div>
    <div
      class="za-keyboard__item"
    >
      3
    </div>
    <div
      class="za-keyboard__item"
    >
      4
    </div>
    <div
      class="za-keyboard__item"
    >
      5
    </div>
    <div
      class="za-keyboard__item"
    >
      6
    </div>
    <div
      class="za-keyboard__item"
    >
      7
    </div>
    <div
      class="za-keyboard__item"
    >
      8
    </div>
    <div
      class="za-keyboard__item"
    >
      9
    </div>
    <div
      class="za-keyboard__item"
    >
      x
    </div>
    <div
      class="za-keyboard__item"
    >
      0
    </div>
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--keyboard za-icon--default za-icon--lg"
        theme="default"
        type="keyboard"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#keyboard"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    class="za-keyboard__handle"
  >
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--deletekey za-icon--default za-icon--lg"
        theme="default"
        type="deletekey"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#deletekey"
          />
        </svg>
      </i>
    </div>
    <div
      class="za-keyboard__item za-keyboard__item--ok"
    >
      确定
    </div>
  </div>
</div>
`;

exports[`Keyboard type is price 1`] = `
<div
  class="za-keyboard"
>
  <div
    class="za-keyboard__keys"
  >
    <div
      class="za-keyboard__item"
    >
      1
    </div>
    <div
      class="za-keyboard__item"
    >
      2
    </div>
    <div
      class="za-keyboard__item"
    >
      3
    </div>
    <div
      class="za-keyboard__item"
    >
      4
    </div>
    <div
      class="za-keyboard__item"
    >
      5
    </div>
    <div
      class="za-keyboard__item"
    >
      6
    </div>
    <div
      class="za-keyboard__item"
    >
      7
    </div>
    <div
      class="za-keyboard__item"
    >
      8
    </div>
    <div
      class="za-keyboard__item"
    >
      9
    </div>
    <div
      class="za-keyboard__item"
    >
      .
    </div>
    <div
      class="za-keyboard__item"
    >
      0
    </div>
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--keyboard za-icon--default za-icon--lg"
        theme="default"
        type="keyboard"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#keyboard"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    class="za-keyboard__handle"
  >
    <div
      class="za-keyboard__item"
    >
      <i
        class="za-icon za-icon--deletekey za-icon--default za-icon--lg"
        theme="default"
        type="deletekey"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#deletekey"
          />
        </svg>
      </i>
    </div>
    <div
      class="za-keyboard__item za-keyboard__item--ok"
    >
      确定
    </div>
  </div>
</div>
`;
